Issue #14120: Add module-info.java to make checkstyle a proper named Java module